--- a/changelog
+++ b/changelog
@@ -1,7 +1,9 @@
 ---------------
     0.2.1
 ---------------
-
+-Auto-Type
+-Custom Icons Extension
+-when saving an attachment the original filename is adopted by the file dialog
 ---------------
     0.2.0
 ---------------
