--- a/changelog
+++ b/changelog
@@ -1,9 +1,14 @@
 ---------------
     0.2.1
 ---------------
--Auto-Type
--Custom Icons Extension
+-added AutoType feature
+-added custom icons feature
+-new command line option for manual language selection (-lang <LOCALE-CODE>)
 -when saving an attachment the original filename is adopted by the file dialog
+-fixed strange sorting behavior of entries (Bug #7083)
+-sorting by dates now works as expected
+-the 'Expires' column and the detailed entry view now also show the string 'never' for entries which don't expire
+-entry view now gets updated after changing the column setup
 ---------------
     0.2.0
 ---------------
