--- a/todo
+++ b/todo
@@ -1,2 +1,1 @@
-- remember selection states after add/remove actions
-- menu 'View': option for toolbar icons size
+- no taskbar entry for modal dialog under gnome?
