update of french translation, TrActive will be set correctly again (display of the translation author)
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@101 b624d157-de02-0410-bad0-e51aec6abb33

--- a/changelog
+++ b/changelog
@@ -2,20 +2,20 @@
     0.2.2
 ---------------
 -fixed crash when parsing config file under Win32
--fixed loss of entry icons when saving a database which was not created 
- with KeePassX (no KPX_CUSTOM_ICONS metastream)
+-fixed loss of entry icons when saving a database which was not created with KeePassX (no KPX_CUSTOM_ICONS metastream)
+-introduces new metastream format for custom icons
 -removed all old Qt3 support dependecies
+-QtNetwork and QtSql are not longer requiered (when using Qt 4.1.3 or later)
 -implemented correct UUID management for entries
 -added delay of 0.3s before performing auto-type
 -metastreams now get valid group IDs (KeePass/Win compatibility)
 -fixed drawing errors when performing drag and drop operations in group view
--when there is no translation installed for the system's country preference but
- one for the same language the program will use it now
--when canceling the file dialog for the opening of an existing database a already
- openend database will not longer be closed
+-when there is no translation installed for the system's country preference but one for the same language the program will use it now
+-when canceling the file dialog for the opening of an existing database a already openend database will not longer be closed
 -same for the creation of a new database
 -alpha blending for banner icons
 -new standard banner icon
+-MacOS packages: all Qt libraries are now included in the application bundle (extra installation is not longer necessary)
 ---------------
     0.2.1
 ---------------
