Another bunch of GUI changes Auto-save database on program exit: apply adjusted patch #1900048 (closes #1792317)
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@159 b624d157-de02-0410-bad0-e51aec6abb33

--- a/todo
+++ b/todo
@@ -1,8 +1,5 @@
-Database:
-  -need to change the interface of the generic Database class so that no direct references
-   or pointers to group or entry objects are used:
-   1. approach: CEntry e=getEntry( ...by any attrib...); //get a COPY
-		e.Title="Blubb";
-		setEntey(e);
-   2. approach: EntryID id=getEntryID(...by any attrib...); //get an ID (maybe the list index)
-		setEntryTitle(id,"Blubb");
+Mass modify entries
+Backup group (exclude from search)
+Improve password generator
+Manually select language
+kde4 plugin: clear klipper history
