- support for precompiled headers - made password dialog more userfriendly (especially key file creation/selection) - database file as command line argument is recognized again - fixed bug #1825446 (commandline option -cfg does NOT take relative path) - fixed mac buid problem (see item #1908868)
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@174 b624d157-de02-0410-bad0-e51aec6abb33

--- a/changelog
+++ b/changelog
@@ -1,4 +1,16 @@
 ---------------
+    0.3.1
+---------------
+- made key/password dialog more user friendly
+- program accepts Qt command line switches like "-style" again
+
+---------------
+    0.3.0a
+---------------
+- fixed bug which prevented MacOS X bundle from starting (Bug #1906517)
+- fixed error message about missing license file when opening about dialog (Bug #1906696)
+
+---------------
     0.3.0
 ---------------
 - many bug fixes
