Associate KeePassX with *.kdb on Linux
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@224 b624d157-de02-0410-bad0-e51aec6abb33

--- a/changelog
+++ b/changelog
@@ -1,6 +1,11 @@
----------------
-    0.3.2
----------------
+----------------------------
+    0.3.3 (2008-08-11)
+----------------------------
+- fix an error when opening twofish encrypted databases
+
+----------------------------
+    0.3.2 (2008-07-20)
+----------------------------
 - add default groups when creating a database
 - improved the auto-type dialog (keyboard only usage, visual selection feedback)
 - automatically try to unlock db when global auto-type key has been pressed
