Added 2 new password generator options
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@227 b624d157-de02-0410-bad0-e51aec6abb33

--- a/changelog
+++ b/changelog
@@ -1,7 +1,7 @@
 ----------------------------
     0.3.3 (2008-08-11)
 ----------------------------
-- fix an error when opening twofish encrypted databases
+- fixed error when opening twofish encrypted databases (Bug #2025075)
 
 ----------------------------
     0.3.2 (2008-07-20)
