Add compiled translation files Remove rpm spec file
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@251 b624d157-de02-0410-bad0-e51aec6abb33

--- a/changelog
+++ b/changelog
@@ -1,5 +1,5 @@
 ----------------------------
-    0.4.0beta1 ()
+    0.4.0beta1 (2009-01-11)
 ----------------------------
 - Added pronounceable password generator
 - Added action "Copy URL to Clipboard"
