--- a/changelog
+++ b/changelog
@@ -1,4 +1,20 @@
 ----------------------------
+    0.4.1 (2009-06-XX)
+----------------------------
+- Added initial documentation
+- Added and improved many translations
+- Fixed: Mispelling of initialize in interface (Bug #2806402)
+- Fixed: Race condition on lock file (Bug #2801583)
+- Fixed: Modified entry does not refresh Entry Details Pane (Bug #2782262)
+- Fixed: Logoff doesn't close database correctly (Bug #2726197)
+- Fixed: Incorrect auto-type keymapping when KeePassX is in autostart
+- Fixed: Workspace is being locked after auto-type
+- Fixed: Wrong "Key Stroke Delay" (Bug #2716877)
+- Fixed key rounds benchmark to return incorrect results
+- Set default auto-type key stroke delay to 5ms
+- Removed "Close to Tray" option
+
+----------------------------
     0.4.0 (2009-03-25)
 ----------------------------
 - Added pronounceable password generator
