Use large icon for Mac OS X dock
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@337 b624d157-de02-0410-bad0-e51aec6abb33

--- a/changelog
+++ b/changelog
@@ -1,7 +1,7 @@
 ----------------------------
     0.4.1 (2009-08-XX)
 ----------------------------
-- Added initial documentation
+- Added initial documentation (by Jussi Sainio)
 - Added and improved many translations
 - Seperate columns settings between normal and search results view
 - Interrupt auto-type if the focused window changed meanwhile
