Add option to show the application window always on top
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@340 b624d157-de02-0410-bad0-e51aec6abb33

--- a/changelog
+++ b/changelog
@@ -1,8 +1,10 @@
 ----------------------------
-    0.4.1 (2009-08-XX)
+    0.4.1 (2009-09-XX)
 ----------------------------
 - Added initial documentation (by Jussi Sainio)
 - Added and improved many translations
+- Added ability to drag'n'drop fields (username, password, ...) to other applications
+- Added option to show the application window always on top
 - Seperate columns settings between normal and search results view
 - Interrupt auto-type if the focused window changed meanwhile
 - Reduced height of password generator dialog (Bug #2831504)
