--- a/changelog
+++ b/changelog
@@ -1,18 +1,23 @@
 ----------------------------
-    0.4.2 (2010-02-??)
+    0.4.2 (2010-03-03)
 ----------------------------
 
 - Re-added "Close to Tray" option
+- Use icon of parent group when creating a new entry (Bug #2494084)
 - Make database file saving transactional to avoid data loss
-- Fix build errors with MSVC compiler (Bug #2926945), Qt 4.6 (Bug #2900850) and binutils gold linker
+- Fixed build errors with MSVC compiler (Bug #2926945), Qt 4.6 (Bug #2900850) and binutils gold linker
 - Switch focus to new entries (Bug #2899867, #2928843)
-- Added Cmd-M shortcut on Mac OS to minimize window (Bug: #2827152)
-- Copy to clipboard even if field is empty (Bug: #2889145)
+- Added Cmd-M shortcut on Mac OS to minimize window (Bug #2827152)
+- Copy to clipboard even if field is empty (Bug #2889145)
 - Fixed possible database corruption when adding a new group while the Backup group exists (Bug #2897997)
 - Don't give up asking for the password after one decryption error when using the Twofish algorithm
+- Don't allow to drag'n'drop between databases to fix a crash (Bug #2961045)
+- Fixed: Closing KeePassX doesn't remove passwords from clipboard (Bug #2946601)
+- Fixed: Icons could be shown multiple times in Group dialog (Bug #2711510)
 - Fixed: Maximized state not saved when minimizing to tray [Windows] (Bug #2926367)
 - Better detection of the default directory to save the database
-- Add Japanese and Ukrainian translations missing in the last release
+- Added translations: Japanese, Portuguese, Serbian and Slovak and Ukrainian
+- Updated many translations
 
 ----------------------------
     0.4.1 (2009-09-14)
