Update changelog, prepare for release
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@380 b624d157-de02-0410-bad0-e51aec6abb33

--- a/changelog
+++ b/changelog
@@ -1,4 +1,10 @@
 ----------------------------
+    0.4.3 (2010-03-07)
+----------------------------
+
+- Fixed crash when editing groups (regression introduced in 0.4.2) (Bug #2964295)
+
+----------------------------
     0.4.2 (2010-03-03)
 ----------------------------
 
